Fixed bug, normalize unarny minus convertet incorrectly '-((-2) ^ 2) -> -(((-2) ^ 2)'